--- a/app/src/main/res/menu/example_menu.xml
+++ b/app/src/main/res/menu/example_menu.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/item1"
+    <item android:id="@+id/home"
         android:icon="@drawable/ic_icon"
-        android:title="Item 1"
+        android:title="Продукти"
         app:showAsAction="ifRoom" />
-    <item android:id="@+id/item2"
-        android:title="Item 2"
+    <item android:id="@+id/login"
+        android:title="Вхід"
+        app:showAsAction="never" />
+    <item android:id="@+id/register"
+        android:title="Реєстрація"
         app:showAsAction="never" />
 
     <item android:id="@+id/item3"
