--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="productGridBackgroundColor">#FFFFFF</color>
     <color name="errorMessage">#FF0000</color>
     <color name="black_effective">#2a2a2a</color>
+    <color name="colorIcons">#FFFFFF</color>
 </resources>
