--- a/app/src/main/res/layout/fragment_product_grid.xml
+++ b/app/src/main/res/layout/fragment_product_grid.xml
@@ -5,6 +5,20 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".prductview.ProductGridFragment">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/add_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:text="@string/button_add" />
+
+    </RelativeLayout>
 
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
